# FinalProject

./: LICENSE  README.md
3D Scene Understanding/: .gitignore  CMakeLists.txt  README.md
3D Scene Understanding/Grounded-SAM/: .gitignore  README.md  check_category.py  ram_demo_noaug_scannet.sh
3D Scene Understanding/cpp/GeoSeg/: CMakeLists.txt  README.md
3D Scene Understanding/cpp/GeoSeg/Log/scannet/: scannet.log.20231203-153553.10135  scannet.log.20231203-213218.21502
3D Scene Understanding/cpp/GeoSeg/configs/: scannet.yaml
3D Scene Understanding/cpp/GeoSeg/examples/cpp/: plane_seg.cpp
3D Scene Understanding/cpp/GeoSeg/include/dataset/: scannet.h
3D Scene Understanding/cpp/GeoSeg/include/global_definition/: global_definition.h.in
3D Scene Understanding/cpp/GeoSeg/include/segmentation/: octree.h  octree_seg.h  voxel.h  voxel_clustering.h
3D Scene Understanding/cpp/GeoSeg/include/travel/: tgs.hpp
3D Scene Understanding/cpp/GeoSeg/include/utils/: bounding_box.h  config.h  file_manager.h  geo_utils.h  tic_toc.h
3D Scene Understanding/cpp/GeoSeg/src/dataset/: scannet.cpp
3D Scene Understanding/cpp/GeoSeg/src/utils/: config.cpp  file_manager.cpp
3D Scene Understanding/scripts/: dense_mapping.py  fuse_detection.py  postfuse.py  project_util.py  render_result.py  semantic_mapping.py
FinalSystem/: Assembly-CSharp.csproj  ISDN5300.sln  Pcx.Editor.csproj  Pcx.csproj  Readme.md
FinalSystem/Assets/Pcx/: scene0011_01_semantic.ply
FinalSystem/ProjectSettings/: ProjectSettings.asset  TagManager.asset
FinalSystem/UserSettings/: EditorUserSettings.asset
(+63 files in other folders)
